<?xml version="1.0"?>
<package>
  <name>circle_detection</name>
  <version>0.0.1</version>
  <description>Circle detection package</description>

  <maintainer email="meghraj.bagde@rwth-aachen.de">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>PCL</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>PCL</run_depend>
  <export>
    <cpp lflags="-lcircle_detection"/>
  </export>
</package>
